# isolde

./: .gitattributes  .gitignore  .gitmodules  .sconsign.dblite  0-coot-history.py  0-coot-history.scm  COPYRIGHT.md  README.md  SConstruct  bundle_builder.py  clipper.i  isolde  notes.txt  pyfft_gpu_test.py  pyfft_test.py  reikna_fft_test.py
clipper_newbuild/swig/: CMakeLists.txt  atoms.i  clipper-doc.i  clipper.i  clipper_types.i  hkl_datatypes.i  symop.i  symop_arrays.i  util.i
clipper_newbuild/swig/MacOS/: CMakeLists.txt
isolde/: ._geometry.py  .gitattributes  .gitignore  CLAUDE.md  ISOLDE EULA 1.0.docx  IsoldeFrame.ui  LICENSE.md  Makefile  __init__.py  _geometry.os  backbone_restraints.py  bundle_info.xml  clean_docs.py  color.py  copyright.txt  dihedrals.py  fps.py  geometry.py  haptics.py  isolde.py  isoldemake  isoldewidget.bak  isoldewidget.py  license.txt  make_docs.bat  make_win.bat  map_bug.py  modeller.py  mousemodes.py  picking.py  position_restraints.py  prep_toml.py  pyproject.toml  pyproject.toml.in  pyuic  register_shift.py  resources_rc.py  restraints_base.py  rotamers.py  run_chimerax.bat  (+16 more)
isolde/.atom/: config.cson
isolde/ISOLDE.egg-info/: requires.txt
isolde/amberff/: 0-coot-history.py  0-coot-history.scm
isolde/amberff/coot-download/: pdb1y1v.ent
isolde/docs/: Makefile  make.bat  run_sphinx.py
isolde/docs/source/: conf.py  contact.rst  index.rst  intro.rst  isolde.rst  license.html  license.rst  requirements.rst
isolde/isolde/: IsoldeWidget.ui  __init__.py  eventhandler.py  isolde.py  isolde_gui.py  isoldewidget.py  mousemodes.py  palettes.py  sim_interface.py  volumetric.py
isolde/molprobity_data/: ala.rama.combined.data  gly.rama.combined.data  penultimate_rotamer_library.data  prepro.rama.combined.data  rama8000-ileval-nopreP.data  rama8000-prepro-noGP.data  rota8000-ile.data
isolde/resources/: resources.qrc
isolde/src/: IsoldeFrame.ui  IsoldeWindow.ui  __init__.py  _geometry.cpp  alphafold_patch.py  amber_cmap.py  backbone_restraints.py  benchmark.py  checkpoint.py  citation.py  cloc_excludes.txt  cmd.py  color.py  colors.h  constants.h  constants.py  custom_forces.py  delayed_reaction.py  dialog.py  dihedral_interface.py  dihedrals.py  doc  eventhandler.py  fps.py  geometry.py  haptics.py  header.txt  isolde.py  isolde_main_win.py  isolde_model.py  isoldewidget.py  model_container.py  modeller.py  molarray.py  molc.cpp  molc.h  molobject.py  mousemodes.py  multiproc_test.py  navigate.py  (+26 more)
isolde/src/async/: __init__.py
isolde/src/atomic/: __init__.py  ccd.py  chirality.py  ligand_utils.py  rdkit_bridge.py  template_proxy.py  template_utils.py  util.py
isolde/src/atomic_cpp/: chiral.cpp  chiral.h  chiral_ext.h  chiral_mgr.cpp  chiral_mgr.h  chiral_mgr_ext.h  dihedral.cpp  dihedral.h  dihedral_ext.h  dihedral_mgr.cpp  dihedral_mgr.h  dihedral_mgr_ext.h  peptide_backbone_dihedrals.h  util.h
isolde/src/cif_utils/: parse_mon_lib_links.py
isolde/src/clustering/: __init__.py  clustering.py
isolde/src/cmd/: __init__.py  agent_manifest.py  agent_philosophy.py  argspec.py  cmd.py  command_registry.py  decouple.py  invoke.py  schema.py  shorthand.py  witness.py
isolde/src/ctypes/: __init__.py  util.py
isolde/src/demo_data/: __init__.py
isolde/src/dictionaries/: aa-variants-v1.cif  chirals.json  core_components.cif  glycan_chirals.json  named_dihedrals.json  named_torsions.json  rota_data.json  sugars.json
isolde/src/docs/: .gitignore
isolde/src/geometry/: geometry.h  spherical_k_means.cpp
isolde/src/graph/: LICENSE  __init__.py  graph.cpp  mcsp.cpp  mcsp.cpp.bak  mcsp.h  mcsplit_ext.cpp
isolde/src/icons/: navigate.xcf
isolde/src/interpolation/: __init__.py  interp.py  make_cmd.txt  nd_interp  nd_interp.cpp  nd_interp.h  sparse_array.cpp  sparse_array.h  sparse_nd_interp.cpp  sparse_nd_interp.h  sparse_nd_matrix.h
isolde/src/manipulations/: __init__.py  cmd.py  peptide_flip.py  register_shift.py
isolde/src/map_tools/: ncs_average.py
isolde/src/mcp/: README.md  __init__.py  server.py
isolde/src/menu/: __init__.py  menu.py  register_isolde_shorthand.py
isolde/src/molprobity_data/: penultimate_rotamer_library.pickle  penultimate_rotamer_library.txt  rota8000-ASN.pickle  rota8000-ASP.pickle  rota8000-GLN.pickle  rota8000-MET.pickle  rota8000-SER.pickle  rota8000-TRP.pickle  rota8000-asn.data  rota8000-asp.data  rota8000-cys.data  rota8000-gln.data  rota8000-ile.data  rota8000-leu.data  rota8000-met.data  rota8000-phetyr.data  rota8000-pro.data  rota8000-ser.data  rota8000-thr.data  rota8000-trp.data  rota8000-tyr.pickle  rota8000-val.data
isolde/src/openmm/: __init__.py  amber_cmap.py  cmd.py  custom_forces.cpp  custom_forces.py  custom_integrators.py  espaloma_charge_provider.py  espaloma_provider.py  ff_tools.py  forcefields.py  garnet_provider.py  minimize.cpp  minimize.h  mmff_provider.py  openff_provider.py  openmm_interface.cpp  openmm_interface.h  openmm_interface.py  param_provider.py  sim_handler.py  sim_interface.py  sim_param_mgr.py  sim_thread.py  symmetry_sim.py  weighting.py
isolde/src/output/: __init__.py
isolde/src/parmed/: __init__.py
isolde/src/phenix/: __init__.py  map_symmetry.py  parameterise.py
isolde/src/problem_regions/: problems.py  ui.py
isolde/src/refine/: __init__.py  backrub_rotamer.py  bfactor_refine.py  fit_utils.py  refine_b_factors.py  rotafit.py  rotafit_README.md  settle_common.py  settle_poses.py
isolde/src/remote_control/: __init__.py  server_methods.py
isolde/src/resources/: resources.qrc
isolde/src/restraints/: __init__.py  cmd.py  constants.py  crosslinks.py  dihedral_restraints.cpp  dihedral_restraints.h  distance_restraints.cpp  distance_restraints.h  nmr.py  position_restraints.cpp  position_restraints.h  position_restraints.py  restraint_utils.py
isolde/src/restraints_cpp/: adaptive_distance_restraints.cpp  adaptive_distance_restraints.h  adaptive_distance_restraints_ext.h  changetracker.cpp  changetracker.h  mdff.cpp  (+16 more)
isolde/src_cpp/: constants.h  molc.cpp
isolde/tools/: _isolated_chimerax.py  build_reference_stress_library.py  gen_rs_glyphs.py
(+683 files in other folders)
